--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "strict": true,
         "target": "es6",
         "types": [
