--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
     "devDependencies": {
         "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-6",
         "@rollup/plugin-typescript": "^8.2.1",
+        "@types/chai": "^4.2.18",
+        "@types/mocha": "^8.2.2",
+        "chai": "^4.3.4",
+        "mocha": "^8.4.0",
         "rollup": "^2.48.0",
         "rollup-plugin-sass": "^1.2.2",
+        "ts-node": "^9.1.1",
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
+    },
+    "scripts": {
+        "test": "mocha -r ts-node/register -r chai/register-should **/*.spec.ts"
     }
 }
