--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
     "name": "wor",
     "version": "0.1.0",
     "private": true,
-    "module": "true",
     "devDependencies": {
-        "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-2",
-        "esm": "^3.2.25",
-        "gulp": "^4.0.2",
-        "gulp-dart-sass": "^1.0.2",
-        "gulp-rollup": "^2.17.0",
-        "gulp-typescript": "^6.0.0-alpha.1"
+        "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-6",
+        "@rollup/plugin-typescript": "^8.2.1",
+        "rollup": "^2.50.3",
+        "rollup-plugin-sass": "^1.2.2",
+        "tslib": "^2.2.0",
+        "typescript": "^4.3.2"
     }
 }
