--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.2",
     "devDependencies": {
         "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-6",
+        "@rollup/plugin-replace": "^2.4.2",
         "@rollup/plugin-typescript": "^8.2.1",
         "@types/chai": "^4.2.18",
         "@types/mocha": "^8.2.2",
