--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
         "noImplicitOverride": true,
+        "noImplicitReturns": true,
         "resolveJsonModule": true,
         "strict": true,
         "target": "es2020",
