publish manifest as well

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,23 +5,35 @@ on:
     types: [created, edited]
 
 jobs:
-  publish_zip:
+  tag_parser:
     runs-on: ubuntu-latest
 
+    outputs:
+      version: ${{ steps.main.outputs.version }}
+
     steps:
-      - name: Determine filename from release tag
-        id: tag_parser
+      - name: Check Ref is well-formed
         run: |
           set -eu
-          PREFIX='refs/tags/v'
-
-          if [[ "${GITHUB_REF}" != ${PREFIX}* ]]; then
-            2>&1 echo "Release tag ‘${GITHUB_REF}’ does not start with ‘${PREFIX}’"
+          if [[ "${GITHUB_REF}" != refs/tags/v* ]]; then
+            2>&1 echo "Release tag ‘${GITHUB_REF}’ does not start with ‘refs/tags/v’"
             false
           fi
 
-          echo "::set-output name=zip::wor-${GITHUB_REF:${#PREFIX}}.zip"
+      - name: Determine filenames from Ref
+        id: main
+        run: |
+          set -eu
+          echo "::set-output name=version::${GITHUB_REF:11}"
 
+  publish_zip:
+    runs-on: ubuntu-latest
+    needs: tag_parser
+
+    outputs:
+      url: ${{ steps.upload.outputs.browser_download_url }}
+
+    steps:
       - name: git checkout
         uses: actions/checkout@v2
 
@@ -32,24 +44,42 @@ jobs:
         run: NODE_ENV=production npx rollup -c
 
       - name: Create ZIP
-        env:
-          FILENAME: ${{ steps.tag_parser.outputs.zip }}
         run: |
           set -eu
           shopt -s globstar
-          zip "${FILENAME}" system.json template.json dist/wor.js dist/wor.css src/**/*.hbs
+          zip wor.zip system.json template.json dist/wor.js dist/wor.css src/**/*.hbs
 
       - name: Upload ZIP
+        id: upload
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ github.token }}
-          file: ${{ steps.tag_parser.outputs.zip }}
+          file: wor.zip
           tag: ${{ github.ref }}
+          asset_name: ${{ format('wor-{0}.zip', needs.tag_parser.outputs.version) }}
           overwrite: true
 
-      # - name: Update manifest
-      #   uses: jossef/action-set-json-field@v1
-      #   with:
-      #     file: system.json
-      #     field: downloadUrl
-      #     value: ${{ format('https://github.com/fishmilk-society/wor/releases/download/v${0}/wor-${0}.zip', env.VERSION) }}
+  publish_manifest:
+    runs-on: ubuntu-latest
+    needs: [tag_parser, publish_zip]
+
+    steps:
+      - name: git checkout
+        uses: actions/checkout@v2
+
+      - name: Specify ZIP in manifest
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: system.json
+          field: downloadUrl
+          value: ${{ needs.publish_zip.outputs.url }}
+
+      - name: Upload manifest
+        id: upload
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ github.token }}
+          file: system.json
+          tag: ${{ github.ref }}
+          asset_name: ${{ format('wor-{0}.json', needs.tag_parser.outputs.version) }}
+          overwrite: true
