--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,7 +71,7 @@ jobs:
         uses: jossef/action-set-json-field@v1
         with:
           file: system.json
-          field: downloadUrl
+          field: download
           value: ${{ needs.publish_zip.outputs.url }}
 
       - name: Upload manifest
