--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+    "include": [
+        "src"
+    ],
     "compilerOptions": {
         "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
