--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
     "name": "wor",
     "version": "0.2.0",
     "devDependencies": {
-        "@league-of-foundry-developers/foundry-vtt-types": "^0.8.8-9",
-        "@rollup/plugin-replace": "^2.4.2",
-        "@rollup/plugin-typescript": "^8.2.1",
-        "@types/chai": "^4.2.18",
-        "@types/mocha": "^8.2.2",
-        "chai": "^4.3.4",
-        "mocha": "^8.4.0",
-        "rollup": "^2.50.3",
-        "rollup-plugin-sass": "^1.2.2",
-        "ts-node": "^10.0.0",
-        "tslib": "^2.2.0",
-        "typescript": "^4.3.2"
+        "@league-of-foundry-developers/foundry-vtt-types": "0.8.9-2",
+        "@rollup/plugin-replace": "*",
+        "@rollup/plugin-typescript": "*",
+        "@types/chai": "*",
+        "@types/mocha": "*",
+        "chai": "*",
+        "mocha": "*",
+        "rollup": "*",
+        "rollup-plugin-sass": "*",
+        "ts-node": "*",
+        "tslib": "*",
+        "typescript": "4.3.x"
     },
     "scripts": {
         "test": "mocha -r ts-node/register -r chai/register-should **/*.spec.ts"
