--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,11 +5,8 @@ on:
     types: [created, edited]
 
 jobs:
-  tag_parser:
+  job:
     runs-on: ubuntu-latest
-
-    outputs:
-      version: ${{ steps.main.outputs.version }}
 
     steps:
       - name: Check Ref is well-formed
@@ -20,22 +17,35 @@ jobs:
             false
           fi
 
-      - name: Determine version from Ref
-        id: main
+      - name: Parse Ref
+        id: tag_parser
         run: |
           set -eu
-          echo "::set-output name=version::${GITHUB_REF:11}"
+          echo "WOR_VERSION=${GITHUB_REF:11}" >> $GITHUB_ENV
 
-  publish_zip:
-    runs-on: ubuntu-latest
-    needs: tag_parser
-
-    outputs:
-      url: ${{ steps.upload.outputs.browser_download_url }}
-
-    steps:
       - name: git checkout
         uses: actions/checkout@v2
+
+      - name: Update version in package.json
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: package.json
+          field: version
+          value: ${{ env.WOR_VERSION }}
+
+      - name: Update version in manifest
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: system.json
+          field: version
+          value: ${{ env.WOR_VERSION }}
+
+      - name: Update download URL in manifest
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: system.json
+          field: download
+          value: ${{ format('https://github.com/fishmilk-society/wor/releases/download/v{0}/wor-{0}.zip', env.WOR_VERSION) }}
 
       - name: npm install
         run: npm install
@@ -50,36 +60,35 @@ jobs:
           zip wor.zip system.json template.json dist/wor.js dist/wor.css src/**/*.hbs
 
       - name: Upload ZIP
-        id: upload
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ github.token }}
           file: wor.zip
           tag: ${{ github.ref }}
-          asset_name: ${{ format('wor-{0}.zip', needs.tag_parser.outputs.version) }}
+          asset_name: ${{ format('wor-{0}.zip', env.WOR_VERSION) }}
           overwrite: true
 
-  publish_manifest:
-    runs-on: ubuntu-latest
-    needs: [tag_parser, publish_zip]
-
-    steps:
-      - name: git checkout
-        uses: actions/checkout@v2
-
-      - name: Specify ZIP in manifest
-        uses: jossef/action-set-json-field@v1
-        with:
-          file: system.json
-          field: download
-          value: ${{ needs.publish_zip.outputs.url }}
-
       - name: Upload manifest
-        id: upload
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ github.token }}
           file: system.json
           tag: ${{ github.ref }}
-          asset_name: ${{ format('wor-{0}.json', needs.tag_parser.outputs.version) }}
+          asset_name: ${{ format('wor-{0}.json', env.WOR_VERSION) }}
           overwrite: true
+
+      - name: Configure Git
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "<>"
+
+      - name: Publish to temporary branch
+        run: |
+          git checkout -b "tmp-v${WOR_VERSION}"
+          git add package.json package-lock.json system.json
+          git commit -m "Publish v${WOR_VERSION}"
+          git push --force origin HEAD
+
+      - name: Publish to main
+        run: |
+          git push origin HEAD:main
